# cmake-riscv-embedded

./: properties.cmake  settings-gd32vf103-family.cmake  settings-gd32vf103c8xx.cmake  settings-gd32vf103cbxx.cmake  toolchain-riscv-none-embed.cmake
linkerscripts/: gcc_gd32vf103.ld.in
test/: CMakeLists.txt
