cmake_minimum_required (VERSION 3.18)

message("########################################")
message("# Including cross compiler settings... #")
message("########################################")
include("${CMAKE_CURRENT_SOURCE_DIR}/../settings-gd32vf103cbxx.cmake")
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/../toolchain-riscv-none-embed.cmake")
message("*********************")
message("* Project beginning *")
message("*********************")
project(ToolchainTest)

if (DEFINED CMAKE_CROSSCOMPILING)
	message("cross compiling: ${CMAKE_CROSSCOMPILING}")
else()
	message("NOT cross compiling")
endif()

message("ProjSrcDir: ${PROJECT_SOURCE_DIR}")
message("ProjBinDir: ${PROJECT_BINARY_DIR}")
message("ProjectName: ${PROJECT_NAME}")
message("Toolchain: ${TOOLCHAIN}")
message("Using SoC: ${RISCV_SOC}")
message("Memory parameters:")
get_property(FLASH_START GLOBAL PROPERTY PROP_FLASH_START)
get_property(FLASH_SIZE GLOBAL PROPERTY PROP_FLASH_SIZE)
get_property(RAM_START GLOBAL PROPERTY PROP_RAM_START)
get_property(RAM_SIZE GLOBAL PROPERTY PROP_RAM_SIZE)

message("  FLASH: start: ${FLASH_START}; size: ${FLASH_SIZE}")
message("  RAM  : start: ${RAM_START}; size: ${RAM_SIZE}")
add_executable(test main.c)
